# invoke-plugin-for-sphinx

./: .flake8  .pre-commit-config.yaml  CHANGELOG.md  README.md  REUSE.toml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: main.yml  release.yml
.reuse/: dep5
invoke_plugin_for_sphinx/: _plugin.py
invoke_plugin_for_spinx/: __init__.py  _plugin.py
tests/: test_plugin.py
tests/test_project/docs/: conf.py  index.rst
tests/test_project/project/: __init__.py
