[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "invoke-plugin-for-sphinx"
version = "3.0.0"
description = "Sphinx plugin which can render invoke tasks with autodoc"
authors = [{ name = "Kai Harder", email = "kai.harder@sap.com"}]
readme = "README.md"
keywords = ["sphinx", "invoke", "plugin", "inv", "documentation"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Plugins",
    "Framework :: Sphinx :: Extension",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Documentation",
    "Topic :: Documentation :: Sphinx",
    "Typing :: Typed"
]
requires-python = ">=3.9,<4"
dependencies = [
    "sphinx>=7,<9",
    "invoke>=2.1,<3",
    "typing-extensions~=4.4"
]
license = "Apache-2.0"
license-files = ["LICENSE"]

[project.urls]
"Issue Tracker" = "https://github.com/SAP/invoke-plugin-for-sphinx/issues"
"Changelog" = "https://github.com/SAP/invoke-plugin-for-sphinx/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pre-commit==4.2.0",
    "pylint==3.3.7",
    "black==25.1.0",
    "isort==6.0.1",
    "mypy==1.17.1",
    "types-invoke==2.0.0.10",
    "flake8==7.3.0",
    "flake8-tergeo==25.7.9.0",
    "yesqa==1.5.0",
    "pyupgrade==3.20.0",
]
test = [
    "pytest==8.4.1",
    "pytest-mock==3.14.1",
    "pytest-cov==6.2.1",
    "coverage==7.10.3",
    "diff-cover==9.6.0",
]

[tool.setuptools.packages.find]
include = ["invoke_plugin_for_sphinx"]

[tool.setuptools.package-data]
invoke_plugin_for_sphinx = ["py.typed"]

[tool.isort]
profile = "black"
add_imports = ["from __future__ import annotations"]

[tool.mypy]
# main config
strict_optional = true
warn_incomplete_stub = true
warn_no_return = true
warn_unreachable = true
strict = true
warn_unused_ignores = true
enable_error_code = ["explicit-override", "possibly-undefined", "ignore-without-code", "deprecated"]
strict_bytes = true
# output
pretty = true
show_column_numbers = true
show_error_codes = true
show_traceback = true

[tool.pylint.basic]
no-docstring-rgx = "^_"

[tool.pylint.design]
min-public-methods = 0

[tool.pylint.master]
max-line-length = 100
py-version = [3, 9]

[tool.pylint."messages control"]
enable = ["all"]
disable = [
    # allow TODO comments
    "fixme",
    # allow disables
    "locally-disabled",
    "suppressed-message",
]

[tool.pylint.reports]
reports = false

[tool.pylint.similarities]
ignore-imports = true

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_covered = true

[tool.coverage.run]
branch = true

[tool.diff_cover]
include_untracked = true
fail_under = 90
